Fix hover state on mobile for AnswerButton

--- a/src/components/AnswerButton/AnswerButton.module.scss
+++ b/src/components/AnswerButton/AnswerButton.module.scss
@@ -12,7 +12,7 @@
     left: 0;
     transition: 0.3s ease;
   }
-  @media (hover: hover) and (pointer: fine) {
+  &:hover {
     &::before {
       background-color: var(--color-primary);
     }
